Update and rename SILACORP.V2.html to index.html

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         // Opcional: Pre-llenar el logo desde GitHub para propósitos de demostración.
         // Reemplaza "https://raw.githubusercontent.com/Juan-Silas/Images/main/logo.png"
         // con la URL raw de tu imagen de logo real alojada en GitHub.
-        document.querySelector('.logo-container img').src = "https://github.com/control-maker/SILACORP/blob/main/LOGO.png?raw=true";
+        document.querySelector('.logo-container img').src = "https://github.com/control-maker/SILACORP.V2/blob/main/LOGO.png?raw=true";
     </script>
 </body>
 </html>
